lib/test/error/MissingDefinition.agda
-- /Users/banacorn/github/agda-mode/spec/error/MissingDefinition.agda:8,1-2
-- Missing definition for a
module MissingDefinition where

a : A
